# cirqut-server

./: .gitignore  Dockerfile  Makefile  cirqut-server.cabal  configuration.nix  default.nix  release.nix  shell.nix
configuration-examples/: network.json
nix-overrides/: beam-core.nix  beam-migrate.nix  beam-postgres.nix  containers.nix
scripts/: repl.sh
src/: Main.hs
src/Application/: Configuration.hs  Routes.hs
src/Application/Common/: About.hs  Headers.hs
src/Application/Configuration/: Discover.hs  Network.hs
src/Application/Routes/: About.hs  Api.hs  Root.hs
src/Application/Routes/About/: Credits.hs
src/Typeclasses/: Entity.hs
src/Types/: Board.hs  EntityStore.hs  EntityT.hs  Meta.hs  Permissions.hs  Project.hs  Realm.hs  Resource.hs  ResponseT.hs  Role.hs  Row.hs  SingularT.hs  User.hs
src/Types/Misc/: Color.hs
src/Types/ResponseT/: Status.hs
src/Util/: Log.hs  Sugar.hs
src/Util/Common/: ByteString.hs  Identities.hs  Request.hs  Response.hs  Text.hs
